--- a/src/main/resources/templates/inputCustomer.html
+++ b/src/main/resources/templates/inputCustomer.html
@@ -4,7 +4,8 @@
 <title>Insert new customer</title>
 </head>
 <body>
-	<form th:object="${newCustomer}" th:action="@{/inputCustomer}"
+	<form th:object="${newCustomer}"
+		th:action="@{/updateCustomer/{ID}(ID=${newCustomer.ID})}"
 		method='POST'>
 		<!-- Customer first name -->
 		Customer First Name: <input name="fName" size="20" th:field="*{fName}">
@@ -22,7 +23,7 @@
 		<input name="submit" type="submit" value="submit" />
 	</form>
 	<!-- View all link -->
-	<a href="viewAll">View all customers</a>
+	<a href="viewAllCustomers">View all customers</a>
 	<a href="../">Home</a>
 
 </body>
